[package]
name = "hypnos"
version = "0.1.0"
authors = ["rictic <me@rictic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3.29"
serde_json = { version = "1.0.108" }
rand = "0.8.5"
poise = "0.5.7"

[profile.dev]
split-debuginfo = "unpacked"
